--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,16 @@
 {
   "hosting": {
     "public": "build",
-    "site":"sctconfession",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
