--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "public": "build",
-    "site":"sctconfession",
+    "site":"www.sctconfession.web.app",
     "ignore": [
       "firebase.json",
       "**/.*",
